# parzen_windows_cpp

./: CMakeLists.txt  README.md  example.cpp  kernels.cpp
include/: bandwidth.hpp  csv_reader.hpp  kde.hpp
include/parzen_windows/: base_kernel_functions.hpp  base_pdf_generator.hpp
src/: base_kernel_functions.cpp  base_pdf_generator.cpp  csv_reader.cpp  example.cpp  example2.cpp  kde.cpp  server.cpp
src/data/: SampleData.csv  funky_data.csv
tests/: base_pdf_generator_test.cpp
web/: app.js  index.html  plot.css
